@startuml BookApi_DomainModel

hide method
skinparam DefaultFontName Helvetica

package "Book Domain" as Domain {
    entity Author {
        * Id: Id <<Slug>>
        --
        * Name: Name
        * <<N/A>>: RelatedPublishers
    }

    entity Publisher {
        * Id: Id <<Slug>>
        --
        * Name: Name
        * <<N/A>>: RelatedAuthors
    }

    entity Book {
        * ISBN: ISBN <<Slug>>
        --
        * Id: <<N/A>>
        * Title: Title
        * PublishedAt : PublishedAt
        * Publisher: Publisher
        * Authors: Authors
    }

    class BookLike {
        * Book: Book / BookId
        * User: User
        * LikedAt: LikedAt
    }

    Book "0..*" o--* "1..*" Author
    Book "0..*" --* "1" Publisher
    Book "1..*" *--o "0..*" BookLike

    note left of Book
        * ISBNにはバリデーションをかける
        * ID (DB上の主キー) はResponseから秘匿する
        * 著者欄の入力はIDのリストにより行う
          - 入力順を保持すること
        * 出版日は未来の日時の入力も可とする
        * ISBNの重複は許容しない
    endnote

    note bottom of Author
        * 日本語の人名には正規化を行わない (運用でカバーを想定)
        * 名前欄の重複は許容しない
    endnote

    note bottom of Publisher
        * 名前欄の重複は許容しない
    endnote
}

package "User Domain" {
    entity User {
        * Id: <<N/A>>
        --
        * UserId : UserId <<Slug>>
        * Name: Name
        * HashedPassword : <<N/A>>
        * Role: Role
    }

    note bottom of User
        * ユーザーIDは全て小文字に変換される
        * ユーザーIDの重複は許容しない
        * パスワードはハッシュ化して保存
    endnote
}

BookLike "0..*" o-up-* "1..*" User

@enduml